fix some color issue on light and dark mode and overflowing in skills section

--- a/assets/app.css
+++ b/assets/app.css
@@ -5,5 +5,5 @@
 body{
     font-family: 'Inter', sans-serif;
     position: relative;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.29);
 }
